--- a/domain2.html
+++ b/domain2.html
@@ -659,9 +659,57 @@
                 <li>Shredding tools</li>
                 </ul></li></ul>
             <h4>Storage and Retention Policies</h4>
-
     </div>
 
+    <div class="container">
+        <h3>Responding to Incidents</h3>
+        <h4>Incident Response Team (IRT)</h4>
+        <ul>
+            <li>Composed of employees with expertise in different areas to respond to an indident</li>
+        </ul>
+        <h4>Incident Response Procedures</h4>
+        <ul>
+            <li>Preperation</li>
+            <li>First Responder</li>
+            <li>Incident Identification</li>
+            <li>Incident isolation</li>
+            <li>Damage and loss control</li>
+            <li>Escalation and notification</li>
+            <li>Reporting</li>
+            <li>Data Breach</li>
+            <li>Recovery/reconstitution procedures</li>
+            <li>Lessons learned</li>
+            <li>Mitigation steps</li>
+        </ul>
+
+        <h4>Forensic Procedures</h4>
+        <ul>
+            <li>Order of Volatility - What to collect first
+        <ul>
+            <li>Cache</li>
+            <li>RAM</li>
+            <li>Swap</li>
+            <li>HDD</li>
+            <li>Externaly stored logs</li>
+            <li>Archive media</li>
+        </ul></li>
+        <li>Steps <ul>
+           <li>Capture system image</li>
+           <li>Take Hashes to ensure integrity</li>
+           <li>Analyze network traffic and logs</li>
+           <li>Use chain of custody</li>
+           <li>Capture Video</li>
+           <li>Record time offset</li>
+           <li>Screenshots</li>
+           <li>Witnesses</li>
+           <li>Track man hours and expense</li>
+
+            </ul></li></ul>
+
+            <br><br>
+            <h1 class="text-center">TRAIN PEOPLE FOR SECURITY ISSUES RELATING TO THEIR JOB</h1>
+
+    </div>
 
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
