--- a/domain6.html
+++ b/domain6.html
@@ -126,12 +126,10 @@
     </ul>
 </div>
 
-<br>
-
 <div class="container">
     <h3>Basic Cryptography</h3>
     <h4>Hashing</h4>
-    <a href="<has></has>">Hashing Algorithms</a>
+    <a href="hashingalgorithms.html">Hashing Algorithms</a>
     <ul>
         <li>Hashing Files <ul>
             <li>If a file's hash changes you know the integrity is lost but not why</li>
@@ -150,7 +148,7 @@
     <br>
     <h4>Symmetric Encryption</h4>
     <ul>
-        <li>Uses same key to encrypt and decrypt data</li>       <--->Skipped block vs Stream </--->
+        <li>Uses same key to encrypt and decrypt data</li>
         <li>Changes the key multiple times a day</li>
         <li>Types: <ul>
             <li>AES
