--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   		</div>
 	</nav>
 
+    <div class="container"> <h3>Refresh every now and then to see updates. I will be updating a lot this weekend. Click <a href="https://zakawright.github.io/Sec-Study/">here</a> for the hosted site.</h3></div>
 
 
 
