--- a/definitions.html
+++ b/definitions.html
@@ -147,7 +147,12 @@
 	<div class="container">
 	    <a href="domain6.html">Domain 6</a>
 	    <div class="container">
-
+        <ul>
+            <li>Digital signature - an encrypted hash of a message (encrypted with the sender's private key)</li>
+            <li>Cipher suite - combination of cryptographic algorithms that provide several layers of secuirty for TLS and SSL</li>
+            <li>Key stretching - technique used to increase the strenght of stored passwords</li>
+            <li>PKI (Public Key Infrastructure) - Group of technologies used to request, create, manage, store, distribute, and revoke digital certificates</li>
+        </ul>
 	    </div>
 	</div>
 </body>
