--- a/definitions.html
+++ b/definitions.html
@@ -152,6 +152,8 @@
             <li>Cipher suite - combination of cryptographic algorithms that provide several layers of secuirty for TLS and SSL</li>
             <li>Key stretching - technique used to increase the strenght of stored passwords</li>
             <li>PKI (Public Key Infrastructure) - Group of technologies used to request, create, manage, store, distribute, and revoke digital certificates</li>
+            <li>Key escrow - the process of placing a copy of a private key in a safe enviroment</li>
+            <li>Recovery agent - designated individual who can recover or restore cryptographic keys</li>
         </ul>
 	    </div>
 	</div>
