--- a/domain2.html
+++ b/domain2.html
@@ -50,7 +50,9 @@
     		</ul>
   		</div>
 	</nav>
-
+<div class="container">
+    <h1>Domain 2 - Compliance and Op Sec</h1>
+</div>
 	<div class="container">
 		<h3>Redundancy and Fault tolerance</h3>
 		<h4>Types</h4>
